# kagenti

./: .gitignore  CLAUDE.md  Makefile
.claude/skills/graph-loop/: SKILL.md
.github/scripts/common/: 87-setup-test-credentials.sh
.github/scripts/local-setup/: openshell-full-test.sh
.github/workflows/: build-hypershift-ci-image.yaml  build.yaml  e2e-openshell-hypershift.yaml  e2e-openshell-kind.yaml  scorecard.yaml  security-post-merge.yaml  security-scans.yaml
charts/kagenti/: values.yaml
charts/kagenti/templates/: ui.yaml  (+2 more)
charts/openshell/: values.yaml
deployments/scripts/: README.md
docs/: install.md  release-sop.md  releasing.md  sandbox-guide.md
docs/agentic-runtime/: e2e-test-matrix.md  llm-model-comparison.md
docs/ocp/: openshift-install.md
kagenti/backend/: Dockerfile
kagenti/ui-v2/: Dockerfile  package-lock.json  package.json
scripts/: DEMO-kosh.md  DEMO.md  Dockerfile.sandbox  HOW_TO_INSTALL_ROSSOCTL.md  HOW_TO_INSTALL_ROSSOCTLX.md  KOSH-SPEC.md  README-eventing.md  agent-sandbox.sb  bob_sandbox_policy.yaml  kagenti-teleport-setup.py  kosh.py  litellm_sandbox_policy.yaml  pyproject.toml  rossoctlx.py  sandbox.sh  setup-kosh-completions.sh  sync-kagenti-teleport-setup.py  teleport.sh  test-eventing-bridge.py  test-kagenti-teleport-setup.py
scripts/k8s/: index.html  kagenti-teleport-setup-server.yaml
scripts/kind/: preload-images.txt  setup-kagenti.sh
scripts/ocp/: setup-kagenti.sh
scripts/openshell/: configure-cli.sh  deploy-shared.sh  deploy-tenant.sh
scripts/rossocortex-container/: README.md  eventing_bridge.py  rossocortex.py
(+30 files in other folders)
