[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kagenti-rossoctl"
version = "0.1.0"
description = "rossoctl — CLI to manage a rossocortex budget proxy"
requires-python = ">=3.11"
# PEP 723 inline deps in rossoctlx.py are ignored by pip; declare runtime deps here.
dependencies = [
    "httpx>=0.27",
    "jinja2>=3.1",
]

[project.scripts]
# `rossoctl` shell command -> rossoctlx.py:main(). rossoctlx.py is shipped as a
# top-level module (py-modules below), so the import target is just `rossoctlx`.
rossoctl = "rossoctlx:main"

[tool.setuptools]
# Ship ONLY rossoctlx.py from this directory. Setting py-modules disables
# setuptools auto-discovery, so the other scripts in scripts/ are not packaged.
py-modules = ["rossoctlx"]
